--- a/ThesisCode.ipynb
+++ b/ThesisCode.ipynb
@@ -5,8 +5,8 @@
     "colab": {
       "provenance": [],
       "machine_shape": "hm",
-      "gpuType": "V100",
-      "authorship_tag": "ABX9TyM9xbaD64kbaasf7nHmDM7+",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyNlp7ficPm3MrGcr2XA5QLI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,29 +32,16 @@
     {
       "cell_type": "code",
       "source": [
-        "### 1. Mount Google Drive ###\n",
         "\n",
         "from google.colab import drive\n",
         "\n",
         "drive.mount('/content/gdrive')\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "X7j9YmS9gEQP",
-        "outputId": "00d09240-3096-4875-8b86-0d4636184445"
+        "id": "X7j9YmS9gEQP"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/gdrive\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -86,13 +73,11 @@
         "import os\n",
         "\n",
         "from ultralytics import YOLO\n",
+        "model = YOLO(\"yolov8n.pt\")\n",
         "\n",
+        "results = model.train(data=os.path.join(ROOT_DIR, \"google_colab_config.yaml\"), epochs=20, imgsz=640, batch=16)  #train the model\n",
         "\n",
-        "# Load a model\n",
-        "model = YOLO(\"yolov8n.pt\")  # load pre trained model\n",
-        "\n",
-        "# Use the model\n",
-        "results = model.train(data=os.path.join(ROOT_DIR, \"google_colab_config.yaml\"), epochs=20, imgsz=640, batch=16)  # train the model\n",
+        "#results = model.train(data=\"coco8.yaml\", epochs=100, imgsz=640, batch=16)\n",
         "\n",
         "\n",
         "\n"
@@ -138,14 +123,13 @@
         "    all_boxes = []\n",
         "    names = results_list[0].names\n",
         "    print(image_file)\n",
-        "    # Iterate through each result to draw bounding boxes for \"person\" class\n",
+        "    #iterate through each result to draw bounding boxes for \"person\" class\n",
         "    for results in results_list:\n",
         "        for box in results.boxes:\n",
-        "            if results.names[int(box.cls)] == 'person':  # Check for \"person\" class\n",
+        "            if results.names[int(box.cls)] == 'person':  #check for \"person\" class\n",
         "                x1, y1, x2, y2 = map(int, box.xyxy[0].cpu().numpy())\n",
         "                confidence = box.conf\n",
         "                cv2.rectangle(image, (x1, y1), (x2, y2), (0, 255, 0), 2)\n",
-        "                #cv2.putText(image, f'Person: {confidence:.2f}', (x1, y1 - 10), cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 255, 0), 1)\n",
         "\n",
         "    for result in results_list:\n",
         "        for box in result.boxes:\n",
@@ -159,14 +143,11 @@
         "    label = 'person'\n",
         "    for group_idx, group in enumerate(grouped_boxes):\n",
         "        print(group_idx)\n",
-        "        color = tuple(np.random.randint(0, 255, size=3).tolist())  # Random color for each group\n",
+        "        color = tuple(np.random.randint(0, 255, size=3).tolist())  #choose random color for each group\n",
         "        for box in group:\n",
         "            left, top, right, bottom = box\n",
         "            cv2.rectangle(image, (left, top), (right, bottom), color, 2)\n",
         "            print(box)\n",
-        "            #label_idx = int(results2[0].pred[0][group_idx, 5])  # Adjust based on your results structure\n",
-        "            #label = names[label_idx]\n",
-        "            #confidence = float(results2[0].pred[0][group_idx, 4])\n",
         "            cv2.putText(image, f'{label}: group {group_idx}', (left, top - 10), cv2.FONT_HERSHEY_SIMPLEX, 0.4, color, 2)\n",
         "\n",
         "\n",
@@ -182,7 +163,7 @@
         "                f.write(f'\\t{left}, {top}, {right}, {bottom}\\n')\n",
         "\n",
         "\n",
-        "    # Save the annotated image back to Google Drive\n",
+        "    #save the annotated image back to Google Drive\n",
         "\n",
         "print(f\"Processed {len(image_files)} images and saved them to {output_dir}\")"
       ],
@@ -198,24 +179,15 @@
         "import os\n",
         "\n",
         "def read_predicted_groups_from_txt(txt_dir):\n",
-        "    \"\"\"\n",
-        "    Reads predicted groups from .txt files in the specified directory.\n",
-        "\n",
-        "    Args:\n",
-        "        txt_dir (str): Path to the directory containing .txt files.\n",
-        "\n",
-        "    Returns:\n",
-        "        dict: A dictionary where each key is an image file name and the value is a dict of group IDs and bounding boxes.\n",
-        "    \"\"\"\n",
         "    predictions = {}\n",
         "\n",
-        "    # Iterate through each .txt file in the directory\n",
+        "    #iterate through each .txt file in the directory\n",
         "    for txt_file in os.listdir(txt_dir):\n",
         "        if txt_file.lower().endswith('.txt'):\n",
         "            image_name = os.path.splitext(txt_file)[0]\n",
         "            predictions[image_name] = {}\n",
         "\n",
-        "            # Read the contents of the .txt file\n",
+        "            #read the contents of the .txt file\n",
         "            with open(os.path.join(txt_dir, txt_file), 'r') as file:\n",
         "                current_group = None\n",
         "\n",
@@ -225,11 +197,11 @@
         "                        continue\n",
         "\n",
         "                    if line.startswith('Group'):\n",
-        "                        # Extract group ID\n",
+        "                        #extract group ID\n",
         "                        current_group = line.split()[1][:-1]\n",
         "                        predictions[image_name][current_group] = []\n",
         "                    else:\n",
-        "                        # Parse bounding box coordinates\n",
+        "                        #parse bounding box coordinates\n",
         "                        try:\n",
         "                            coords = [int(value.strip()) for value in line.split(',')]\n",
         "                            if len(coords) == 4 and current_group is not None:\n",
@@ -239,11 +211,10 @@
         "\n",
         "    return predictions\n",
         "\n",
-        "# Example usage\n",
         "predicted_txt_dir = '/content/gdrive/My Drive/Colab_Notebooks/AnnotatedGroups'  # Adjust to point to the directory containing your .txt files\n",
         "predicted_groups = read_predicted_groups_from_txt(predicted_txt_dir)\n",
         "\n",
-        "# Display results for verification\n",
+        "#verification\n",
         "for image, groups in predicted_groups.items():\n",
         "    print(f'Image: {image}')\n",
         "    for group, boxes in groups.items():\n",
@@ -256,7 +227,7 @@
         "id": "W8k-f88Ua_RL",
         "outputId": "2b05b7cc-a222-4369-9da6-2f0ce4cccc6c"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -610,7 +581,7 @@
         "\n",
         "os.makedirs(drive_dir_grouped, exist_ok=True)\n",
         "\n",
-        "# Make sure the destination directory exists, if not create it\n",
+        "#make sure the destination directory exists, if not create it\n",
         "shutil.copytree(source_path, destination_path)\n",
         "\n"
       ],
@@ -622,7 +593,7 @@
         },
         "outputId": "ef8f5ea6-8674-4e54-96b4-30a6a5fcbd8d"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -642,36 +613,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import cv2\n",
-        "import numpy as np\n",
-        "from google.colab.patches import cv2_imshow\n",
-        "\n",
-        "image = cv2.imread('/content/gdrive/My Drive/Colab_Notebooks/imgtest.jpeg')\n",
-        "\n",
-        "results2 = model.predict(image)\n",
-        "\n",
-        "for result in results2:\n",
-        "            for box in result.boxes:\n",
-        "                left, top, right, bottom = np.array(box.xyxy.cpu(), dtype=int).squeeze()\n",
-        "                width = right - left\n",
-        "                height = bottom - top\n",
-        "                center = (left + int((right-left)/2), top + int((bottom-top)/2))\n",
-        "                label = results2[0].names[int(box.cls)]\n",
-        "                confidence = float(box.conf.cpu())\n",
-        "                cv2.rectangle(image, (left, top),(right, bottom), (255, 0, 0), 2)\n",
-        "\n",
-        "            cv2_imshow(image)\n",
-        "            cv2.waitKey(0)\n"
-      ],
-      "metadata": {
-        "id": "1kXrfzvhf3Wb"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "import json\n",
         "import os\n",
         "\n",
@@ -686,7 +627,7 @@
         "                ground_truth_data[image_name] = {}\n",
         "\n",
         "                for region in data[\"regions\"]:\n",
-        "                    group_tag = region[\"tags\"][0]  # Assuming one tag per region\n",
+        "                    group_tag = region[\"tags\"][0]  #assuming one tag per region\n",
         "                    bbox = region[\"boundingBox\"]\n",
         "                    bbox_coords = (\n",
         "                        int(bbox[\"left\"]),\n",
@@ -700,7 +641,7 @@
         "    print(ground_truth_data)\n",
         "    return ground_truth_data\n",
         "\n",
-        "json_dir = '/content/gdrive/My Drive/Colab_Notebooks/group_truth_labels'  # Path to your JSON files directory\n",
+        "json_dir = '/content/gdrive/My Drive/Colab_Notebooks/group_truth_labels'\n",
         "ground_truths = load_ground_truth(json_dir)\n"
       ],
       "metadata": {
@@ -710,7 +651,7 @@
         "id": "bSv5jAtQhXdv",
         "outputId": "62cdfc15-b14b-472c-84c3-b19d1608ba9b"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -725,11 +666,11 @@
       "cell_type": "code",
       "source": [
         "def boxes_intersect(box1, box2):\n",
-        "    # Unpack coordinates\n",
+        "    #unpack coordinates\n",
         "    x1, y1, x2, y2 = box1\n",
         "    x3, y3, x4, y4 = box2\n",
         "\n",
-        "    # Check for intersection\n",
+        "    #check for intersection\n",
         "    intersection = not (x2 < x3 or x1 > x4 or y2 < y3 or y1 > y4)\n",
         "    if (intersection):\n",
         "        distanc = abs(y1 - y3)\n",
@@ -739,7 +680,7 @@
       "metadata": {
         "id": "vaumBSTwBlpC"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -771,7 +712,7 @@
       "metadata": {
         "id": "o86YFe-sBn91"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -789,10 +730,9 @@
         "    return inter_area / union_area if union_area > 0 else 0\n",
         "\n",
         "def evaluate_predictions(predicted_groups, ground_truths):\n",
-        "    # Normalize keys by removing any suffix like '_groups' and ensuring file extension consistency\n",
         "    normalized_predicted_groups = {key.split('_')[0] + '.jpeg': value for key, value in predicted_groups.items()}\n",
         "\n",
-        "    # Initialize dictionaries to store precision, recall, and F1 for each image\n",
+        "    #initialize dictionaries to store precision, recall, and F1 for each image\n",
         "    precision_scores = {}\n",
         "    recall_scores = {}\n",
         "    f1_scores = {}\n",
@@ -819,7 +759,7 @@
         "                results[image_name]['fn'] += 1\n",
         "        results[image_name]['fp'] = sum(len(v) for v in pred_groups.values()) - results[image_name]['tp']\n",
         "\n",
-        "        # Calculate precision, recall, and F1 score for each image\n",
+        "        #calculate precision, recall, and F1 score for each image\n",
         "        tp = results[image_name]['tp']\n",
         "        fp = results[image_name]['fp']\n",
         "        fn = results[image_name]['fn']\n",
@@ -827,19 +767,19 @@
         "        recall = tp / (tp + fn) if tp + fn > 0 else 0\n",
         "        f1_score = 2 * (precision * recall) / (precision + recall) if (precision + recall) > 0 else 0\n",
         "\n",
-        "        # Store the scores\n",
+        "        #store the scores\n",
         "        precision_scores[image_name] = precision\n",
         "        recall_scores[image_name] = recall\n",
         "        f1_scores[image_name] = f1_score\n",
         "\n",
-        "    # Calculate average scores\n",
+        "    #calculate average scores\n",
         "    average_precision = sum(precision_scores.values()) / len(precision_scores)\n",
         "    average_recall = sum(recall_scores.values()) / len(recall_scores)\n",
         "    average_f1_score = sum(f1_scores.values()) / len(f1_scores)\n",
         "\n",
         "    return average_precision, average_recall, average_f1_score\n",
         "\n",
-        "# Call the function and print the average scores\n",
+        "#print the average scores\n",
         "average_precision, average_recall, average_f1_score = evaluate_predictions(predicted_groups, ground_truths)\n",
         "print(f\"Average Precision: {average_precision:.2f}\")\n",
         "print(f\"Average Recall: {average_recall:.2f}\")\n",
@@ -852,7 +792,7 @@
         "id": "XnlSEUQr9ksl",
         "outputId": "d0965c01-d699-4110-c5b9-07e185f23df1"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -880,7 +820,6 @@
         "    return inter_area / union_area if union_area > 0 else 0\n",
         "\n",
         "def evaluate_predictions(predicted_groups, ground_truths):\n",
-        "    # Normalize keys by removing any suffix like '_groups' and ensuring file extension consistency\n",
         "    normalized_predicted_groups = {key.split('_')[0] + '.jpeg': value for key, value in predicted_groups.items()}\n",
         "\n",
         "    results = {}\n",
@@ -928,7 +867,7 @@
         "id": "D49Syu9bBwd-",
         "outputId": "adac0524-826d-4141-b1b7-666c2da72a67"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
